--- a/src/styles/Questionnaire.css
+++ b/src/styles/Questionnaire.css
@@ -1,3 +1,12 @@
+h1 {
+  color: #020953;
+  padding: 1rem;
+}
+
+a {
+  text-decoration: none;
+}
+
 .questionnaire {
   padding: 20px;
   font-family: Arial, sans-serif;
