--- a/src/styles/Questionnaire.css
+++ b/src/styles/Questionnaire.css
@@ -1,3 +1,7 @@
+* {
+  background-color: #f5f5f5;
+}
+
 h1 {
   color: #020953;
   padding: 1rem;
@@ -5,6 +9,30 @@ h1 {
 
 a {
   text-decoration: none;
+}
+
+.button-group {
+  border-radius:6px;
+  border: 4px solid #fff;
+    padding: 3rem 0.5rem;
+}
+
+.button-group button {
+  width:100%;
+  margin-bottom: 0.5rem;
+  background-color: #020953;
+  color: #fff;
+  font-weight:bold;
+  border-radius: 6px;
+  font-size:1.5rem;
+}
+
+.button-group button.selected {
+  opacity: 0.5;
+}
+
+.button-group button:hover {
+  opacity: 0.5;
 }
 
 .questionnaire {
@@ -31,7 +59,7 @@ a {
 button {
   padding: 10px 20px;
   border: 2px solid #020953;
-  background-color: #fff;
+  background-color: #f5f5f5;
   color: #020953;
   border-radius: 20px;
   cursor: pointer;
