--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -13,6 +13,8 @@
     margin-bottom: 10px;
     border: none;
     appearance: none; 
+    font-size: 14px;
+    margin-left: 2.5%;
 }
 
 .container {
@@ -37,4 +39,5 @@ a {
     color: white; 
     background: inherit;
     text-decoration: none;
+    font-size: inherit;
   }
