--- a/src/styles/Start.css
+++ b/src/styles/Start.css
@@ -1,3 +1,29 @@
-body {
-    background-image: url("./woman_start.jpeg");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+.image-container {
+    position: relative;
+    text-align: center;
+}
+
+.full-size-image {
+    width: 200%;
+    pointer-events: none; 
+    transform: translate(-9%, -20%);
+
+}
+
+.text-overlay {
+    position: absolute;
+    bottom: 8px; /* Adjust as needed */
+    left: 16px; /* Adjust as needed */
+    color: black; /* Text color */
+    font-size: 42px; /* Adjust font size */
+    transform: translate(0%, -180%);
+    text-align: left;
+    width: 300px;
+    height: 165px;
+    font-family: 'Open Sans', sans-serif;
+    color: #00000075;
+    font-weight: lighter;
+
 }
