- updates images for the landing page - adds ingredeints list selection page

--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -1,11 +1,11 @@
 * {
     background: #E9EAEE;
-    background-image: none;
+    background-image: no;
     font-weight: bold;
 }
 
 .menuBtn{
-    width: 95%;
+    width: 98%;
     background: #020953;
     color: #fff;
     border-radius: 4px;
@@ -15,11 +15,11 @@
     border: none;
     appearance: none; 
     font-size: 14px;
-    margin-left: 2.5%;
+    margin-left: 1%;
 }
 
 .container {
-    margin-top: 7px;
+    margin-top: 4px;
     height: 60px;
     width: 100%;
     border: 1px solid white;
@@ -32,7 +32,9 @@
     font-family: sans-serif;
     
 }
-
+img{
+    padding: 0;
+}
 #faq, #faq p{
     background: #D9D9D9;
 }
@@ -42,3 +44,8 @@ a {
     text-decoration: none;
     font-size: inherit;
   }
+
+.view {
+    display: 'flex'; 
+    padding: 5px;
+}
