--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -1,6 +1,5 @@
 * {
-    background: #E9EAEE;
-    background-image: no;
+    background: #E9EAEE important!;
     font-weight: bold;
 }
 
@@ -34,6 +33,7 @@
 }
 img{
     padding: 0;
+    border-radius: 16px;
 }
 #faq, #faq p{
     background: #D9D9D9;
