make text overlay background transparent

--- a/src/styles/Start.css
+++ b/src/styles/Start.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
+
 .image-container {
     position: relative;
     text-align: center;
@@ -25,5 +26,6 @@
     font-family: 'Open Sans', sans-serif;
     color: #00000075;
     font-weight: lighter;
+    background-color: transparent;
 
 }
